# tatom

./: .gitignore  Pipfile  pyproject.toml
_build/doctrees/: classification_logistic_regression.doctree  datasets.doctree  environment.pickle  preprocessing.doctree  topic_model_visualization.doctree  visualizing_trends.doctree
_build/jupyter/: case_study_racine.ipynb  classification_logistic_regression.ipynb  datasets.ipynb  feature_selection.ipynb  getting_started.ipynb  index.ipynb  preliminaries.ipynb  preprocessing.ipynb  references.ipynb  topic_model_mallet.ipynb  topic_model_python.ipynb  topic_model_visualization.ipynb  visualizing_trends.ipynb  working_with_text.ipynb
_build/website/doctrees/: case_study_racine.doctree  environment.pickle  feature_selection.doctree  getting_started.doctree  index.doctree  preliminaries.doctree  references.doctree  topic_model_mallet.doctree  topic_model_python.doctree  working_with_text.doctree
_build/website/jupyter/: case_study_racine.ipynb  classification_logistic_regression.ipynb  datasets.ipynb  feature_selection.ipynb  getting_started.ipynb  index.ipynb  preliminaries.ipynb  preprocessing.ipynb  references.ipynb  topic_model_mallet.ipynb  topic_model_python.ipynb  topic_model_visualization.ipynb  (+2 more)
source/: Working with text.ipynb  case_study_racine.rst  classification_logistic_regression.rst  conf.py  conf.py.orig  datasets.rst  feature_selection.rst  preliminaries.rst  preprocessing.rst  topic_model_mallet.rst  topic_model_python.rst  topic_model_visualization.rst  visualizing_trends.rst  working_with_text.rst
(+42 files in other folders)
