[tool.poetry]
name = "tatom"
version = "0.1.0"
description = ""
authors = ["SKrywinski <s.krywinski@t-online.de>"]

[tool.poetry.dependencies]
python = "^3.7"
sphinx = "1.6.5"
ipython = "1.2.1"
pandas = "^0.25.3"
patsy = "^0.5.1"
nltk = "3.0"
numpy = "^1.17"
matplotlib = "^3.1"
scikit-learn = "^0.22.0"
scipy = "^1.3"
statsmodels = "^0.10.2"
sphinxcontrib-bibtex = "0.3.1"
sphinxcontrib-tikz = "0.4.1"
sphinx-rtd-theme = "0.1.6"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
